_sass/layout.scss
/* ... */
.scroll::-webkit-scrollbar {
	display: none;
}


nav > ul {
	color: #fff;
	display: flex;
	list-style-type: none;

}

nav > ul li {
	padding-left: 30px;
}

@media only screen and (max-width: 768px) {

	nav > ul li {
		padding-left: 20px;
	}

}

nav > ul li:first-child {
	padding-left: 0px;
	padding-left: 15px;
}

nav > ul li:last-child {
	padding-right: 15px;
}

nav > ul li a:link,
nav > ul li a:visited {
	text-decoration: none;
	color: rgba($header-title-color, 0.6);
}

nav > ul li a:hover,
nav > ul li a:active {
	text-decoration: none;
	color: rgba($header-title-color, 1);
}



// Sub Page Header Styling
.subPageHeaderBackground .logo > p {
	color: #000;
}

.subPageHeaderBackground nav > ul li a:link,
.subPageHeaderBackground nav > ul li a:visited {
	color: rgba(#000, 0.6);
}

.subPageHeaderBackground nav > ul li a:hover,
.subPageHeaderBackground nav > ul li a:active {
	color: rgba(#000, 1);
}



// App Title, Price, Description and Links

.appInfo {
	grid-area: i;
	display: flex;
	flex-wrap: wrap;
	align-content: flex-start;
}

.appDescription {
	grid-area: d;
	display: flex;
	flex-wrap: wrap;
	align-content: flex-start;
	padding: 20px;
}

.appDescription ul {
    margin-left: 1.1em;
}

@media only screen and (max-width: 992px) {

	.appInfo {
		padding-top: 0px;
		justify-content: center;
	}

} 

.appIconShadow {
	display: flex;
	filter: $drop-shadow;
}

.appIconLarge {
	width: 120px;
	height: 120px;
	-webkit-clip-path: url(#shape120);
	clip-path: url(#shape120);
}

.appNamePriceContainer {
	display: flex;
	flex: 0 1 auto;
	flex-direction: column;
	align-items: start;
	justify-content: center;
	margin-left: 30px;
}

.appName {
	color: $app-title-color;
}

.appPrice {
	color: $app-price-color;
	font-weight: normal;
	margin-top: 13px;
}

@media only screen and (max-width: 768px) {

	.appNamePriceContainer {
		width: 100%;
		margin-left: 0px;
		align-items: center;
		justify-content: center;
	}

	.appName {
		margin-top: 30px;
		text-align: center;
	}
	
	.appPrice {
		margin-top: 13px;
		text-align: center;
	}
	
} 

.appHeadlineContainer {
	font-size: 2.5rem;
	font-weight: normal;
	width: 100%;
	align-items: flex-start;
	margin-top: 45px;
	flex: 0 1 auto;
	line-height: 1.5;
}

.appHeadline {
	color: $app-description-color;
}

@media only screen and (max-width: 992px) {

	.appHeadline {
		text-align: center;
	}
	
} 

.downloadButtonsContainer {
	display: inline-block;
	margin-top: 42px;
	filter: $drop-shadow;
}

@media only screen and (max-width: 992px) {

	.downloadButtonsContainer {
		text-align: center;
	}
	
} 

.playStore {
	height: 50px;
}

.appStore {
	height: 50px;
}

.appStoreLink {
    margin-right: 24px;
}

@media only screen {

	.appStore {
		margin-bottom: 0px;
	}
	
} 

@media only screen and (max-width: 528px) {

	.appStoreLink {
		margin-right: 0px;
	}
	
} 





// iPhone Device Preview

.iphoneMock {
    position: absolute;
    margin-top: -445px;
    width: 290px;
    margin-left: -28px;
}

$base-width: 200px;
$base-height: 431px;
$base-margin-left: 17px;
$base-background-size:  260px auto;

$base-width-landscape: 431px;
$base-height-landscape: 180px;

.iphonePreview {
	grid-area: p;
	background-repeat: no-repeat;
	margin-top: 0px;
	justify-content: center;
    background-image: url($device-color);
    background-size: 230px auto;
    background-position: center 0;
    display: flex;
    height: 500px;
}

.iphonePreviewLandscape {
	grid-area: p;
	background-repeat: no-repeat;
	margin-top: 40px;
	justify-content: center;
    background-image: url($device-color-landscape);
    background-size: 430px auto;
    background-position: center 0;
    display: flex;
}

@media only screen and (max-width: 992px) {

	.iphonePreview {
		padding-bottom: 20px;
	}
}

.iphoneScreen {
	width: $base-width;
	-webkit-clip-path: url(#screenMask);
	clip-path: url(#screenMask);
	margin-left: $base-margin-left;
	margin-top: 17px;
}

.videoContainer {
	width: $base-width;
	height: $base-height;
	-webkit-clip-path: url(#screenMask);
	clip-path: url(#screenMask);
	margin-top: 15px;
	margin-left: 2px;
}

.videoContainer > video {
	width: $base-width;
	height: $base-height;
}

.videoContainerLandscape {
	width: $base-width-landscape;
	height: $base-height-landscape;
	margin-top: 15px;
	margin-left: 2px;
}

.videoContainerLandscape > video {
	width: $base-width-landscape;
	height: $base-height-landscape;
}

// Feature List

.testimonials {
	grid-area: t;
	display: flex;
	flex: 0 1 auto;
	align-content: flex-start;
	justify-content: flex-start;
	flex-grow: 1;
	flex-wrap: wrap;

    background-color: #ffffff;
    border-radius: 40px;
    padding: 30px;
}

.feature {
	display: flex;
	padding-top: 63px;
	padding-left: 15px;
	padding-right: 15px;
	width: calc(100%/3);
}

.feature:nth-child(-n+3) {
    padding-top: 0px;   
}

.feature:nth-child(3n) {
	padding-right: 0px;
}

.feature:nth-child(3n+1) {
	padding-left: 0px;
}

.iconBack {
	color: $feature-icons-background-color;
}

.iconTop {
	color: $feature-icons-foreground-color;
}

.socialIconBack {
	color: $social-icons-background-color;
}

.socialIconTop {
	color: $social-icons-foreground-color;
}

.featureText {
	margin-left: 18px;
}

.featureText > h3 {
	color: $feature-title-color;
}

.featureText > p {
	color: $feature-text-color;
	margin-top: 8px;
	line-height: 1.5;
}

@media only screen and (max-width: 992px) {

	.testimonials {
		flex-grow: 1;
		flex-direction: row;
		flex-wrap: wrap;
		margin-top: 11px;
	}

	.feature {
		display: flex;
		padding-top: 41px;
		padding-left: 15px;
		padding-right: 15px;
		width: 100%;
	}

	.feature:nth-child(-n+3) {
		padding-top: 41px;   
	}

	.feature:nth-child(1) {
		padding-top: 0px;   
	}

	.feature:nth-child(3n) {
		padding-right: 15px;
	}
	
	.feature:nth-child(3n+1) {
		padding-left: 15px;
	}
	
}
/* ... */

